Fixed Avatar spacing issue in landing page

--- a/react-frontend/src/containers/pages/homePage/homePage.css
+++ b/react-frontend/src/containers/pages/homePage/homePage.css
@@ -14,8 +14,6 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  width: 80%;
-  margin: auto 10%;
 }
 
 .adv-swipe-box {
